lab10 - fixed a test error (setting parameter epsilon!=0 makes the QLearningAgent behave random)

--- a/lab10/lab10.ipynb
+++ b/lab10/lab10.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,11 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Q_train(num_episodes, alpha = .5, epsilon = .8, gamma = .8):\n",
+    "def Q_train(num_episodes, alpha = .5, epsilon = 0, gamma = .8):\n",
     "    agent_1 = QLearningAgent(alpha, epsilon, gamma)\n",
     "    agent_2 = RandomAgent()\n",
     "    e_range = np.linspace(1, 0.1, num_episodes)\n",
@@ -364,7 +364,7 @@
     "\n",
     "            if game.game_over:\n",
     "                next_state = deepcopy(game.state)\n",
-    "                next_actions = game.available_moves\n",
+    "                next_actions = deepcopy(game.available_moves)\n",
     "                reward = game.reward\n",
     "                agent_1.update(state, action, reward, next_state, next_actions)\n",
     "\n",
@@ -386,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:08<00:00, 12286.57it/s]\n"
+      "100%|██████████| 100000/100000 [00:08<00:00, 12151.21it/s]\n"
      ]
     }
    ],
@@ -410,23 +410,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:01<00:00, 76931.73it/s]"
+      "100%|██████████| 100000/100000 [00:01<00:00, 74645.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wins: 58.33%\n",
-      "ties: 12.73%\n",
-      "loss: 28.94%\n"
+      "wins: 99.42%\n",
+      "ties: 0.58%\n",
+      "loss: 0.00%\n"
      ]
     },
     {
@@ -443,7 +443,7 @@
     "total = 100_000\n",
     "\n",
     "alpha = .5\n",
-    "epsilon = 1\n",
+    "epsilon = 0\n",
     "gamma = .8\n",
     "\n",
     "players = [QLearningAgent(alpha, epsilon, gamma, input_filename=\"Q\"), RandomAgent()]\n",
